# Threader

./: .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
app/: __init__.py  app.py
scripts/: convert_to_parquet.py  optimize_weights.py  plot_pass_style.py  test_pass_network_viz.py  train_scoring_model.py  validate_scoring.py
src/pitch_echo/: __init__.py  pitch.py
src/pitch_echo/analysis/: __init__.py  analyzer.py  models.py
src/pitch_echo/assets/: style.css
src/pitch_echo/core/: __init__.py  models.py  types.py
src/pitch_echo/data/: __init__.py  base.py
src/pitch_echo/data/pff/: __init__.py  events.py  metadata.py  tracking.py  tracking_frames.py
src/pitch_echo/geometry/: __init__.py  distance.py  passing_lane.py
src/pitch_echo/learning/: __init__.py  dataset.py  evaluate.py  interpret.py  models.py
src/pitch_echo/network/: DESIGN.md  __init__.py  builder.py  metrics.py  models.py
src/pitch_echo/research/: __init__.py
src/pitch_echo/research/learning/: __init__.py  dataset.py  evaluate.py
src/pitch_echo/research/pass_value/: __init__.py
src/pitch_echo/research/validation/: __init__.py  baselines.py  collector.py  consistency.py  repeatability.py  sensitivity.py  significance.py
src/pitch_echo/scoring/: __init__.py  completion.py  pass_score.py  space.py
src/pitch_echo/validation/: __init__.py  baselines.py  collector.py  consistency.py  repeatability.py  sensitivity.py  significance.py
src/pitch_echo/viz/: __init__.py  _pitch_utils.py  mpl_passes.py  mpl_pitch.py  plotly_animation.py  plotly_animation_3d.py  plotly_network.py  plotly_passes.py  plotly_pitch.py  plotly_pitch_3d.py
src/threader/: __init__.py  app.py  models.py
src/threader/analysis/: __init__.py  analyzer.py
src/threader/app/: __init__.py  app.py
src/threader/assets/: style.css
src/threader/core/: __init__.py  models.py
src/threader/data/: __init__.py
src/threader/data/pff/: events.py  metadata.py  tracking.py  tracking_frames.py
src/threader/geometry/: __init__.py  distance.py  passing_lane.py
src/threader/learning/: dataset.py  evaluate.py  interpret.py
src/threader/metrics/: __init__.py
src/threader/scoring/: __init__.py  completion.py  pass_score.py  penetration.py  pressure.py  space.py  zone_value.py
src/threader/validation/: baselines.py  collector.py  consistency.py  repeatability.py  sensitivity.py  significance.py
src/threader/viz/: __init__.py  _pitch_utils.py  passes.py  pitch.py  plotly_animation.py  plotly_animation_3d.py  plotly_passes.py  plotly_pitch.py  plotly_pitch_3d.py
tests/: __init__.py  test_analyzer.py  test_completion.py  test_geometry.py  test_pass_score.py
(+31 files in other folders)
