[project]
name = "threader"
version = "0.2.0"
description = "A Python library for football pass analysis research."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "kloppy>=3.18",
]

[project.optional-dependencies]
app = [
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.22",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
deploy = [
    "gunicorn>=22.0",
]
validation = [
    "scipy>=1.12",
    "tabulate>=0.9",
]
learning = [
    "scipy>=1.12",
    "tabulate>=0.9",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
]

[project.scripts]
threader = "threader.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
